@@ -50,7 +50,7 @@
 		    <artifactId>apdu4j-tool</artifactId>
 		</dependency>
 		-->
-		
+		<!--
 		<dependency>
 		    <groupId>org.openjfx</groupId>
 		    <artifactId>javafx-controls</artifactId>
@@ -59,7 +59,7 @@
 		    <groupId>org.openjfx</groupId>
 		    <artifactId>javafx-fxml</artifactId>
 		</dependency>
-		
+		-->
 		<dependency>
 		    <groupId>org.xipki.iaik</groupId>
 		    <artifactId>sunpkcs11-wrapper</artifactId>
@@ -130,19 +130,6 @@
 				<configuration>
 					<source>${maven.compiler.source}</source>
 					<target>${maven.compiler.target}</target>
-	
-                    <!-- jdk.crypto.cryptoki : SunPKCS11 -->
-                    <compilerArgs>
-						<arg>--add-modules</arg>
-						<arg>jdk.crypto.cryptoki</arg>
-						
-						<arg>--add-exports</arg>
-						<arg>jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED</arg>		
-												
-						<!-- Reflection at runtime -->
-						<arg>--add-opens</arg>
-						<arg>jdk.crypto.cryptoki/sun.security.pkcs11=ALL-UNNAMED</arg>
-					</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
